--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="css/style.css" />
-    <script src="javascript/"></script>
+    <script type="module" src="javascript/index.js" defer></script>
 
     <title>Dashboard</title>
   </head>
@@ -43,7 +43,7 @@
         <a href="#" class="light-button"><span>Light</span></a>
         <a href="#" class="water-button"><span>Watering</span></a>
         <a href="#" class="placement-button"><span>Placement</span></a>
-        <a href="#" class="care-button"><span>Care</span></a>
+        <a href="care.html" class="care-button"><span>Care</span></a>
       </section>
     </main>
   </body>
