watering full info page

--- a/care.html
+++ b/care.html
@@ -30,12 +30,13 @@
           alt="Textured photo of kawakawa"
           class="kawakawa-graphic"
         />
-        <a href="index.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
-      </section>
-      <section id="quick-info">
-        <h3>Low-maintenance</h3>
-        <h3>Slow-growing</h3>
-        <h3>Pest-resistent</h3>
+        <a href="full-info-care.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
+     
+        <section class="quick-info">
+          <h3>Low-maintenance</h3>
+          <h3>Slow-growing</h3>
+          <h3>Pest-resistent</h3>
+        </section> 
       </section>
     </main>
   </body>
