--- a/full-info-care.html
+++ b/full-info-care.html
@@ -6,7 +6,8 @@
 
     <!-- Links -->
     <script type="module" src="./javascript/full-info-care.js" defer></script>
-    
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/full-info-care.css" />
 
     <title>Care full information</title>
   </head>
@@ -18,10 +19,24 @@
       </nav>
     </header>
     <main>
-      <section id="each-content">
+      <section id="hero">
+        <h1>Care</h1>
+        <img
+          src="assets/circular-element.svg"
+          alt="Circular graphic element"
+          class="pink-element"
+        />
+        <img
+          src="assets/kawakawa-graphic .png"
+          alt="Textured photo of kawakawa"
+          class="kawakawa-graphic"
+        />
+        <a href="full-info-care.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
       </section>
-      <img src="" alt="">
+
+      <section id="all-content">
+      </section>
+      
     </main>
   </body>
 </html>
- 
