--- a/care.html
+++ b/care.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a href="#" class="brand-name"><h5>Akea Haus</h5></a>
+        <a href="index.html" class="brand-name"><h5>Akea Haus</h5></a>
         <a href="#" class="menu">menu</a>
       </nav>
     </header>
