--- a/full-info-light.html
+++ b/full-info-light.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Links -->
-    <script type="module" src="./javascript/full-info-care.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/full-info-care.css" />
+    <link rel="stylesheet" href="css/full-info-light.css" />
 
-    <title>Care full information</title>
+    <title>Light full information</title>
   </head>
   <body>
     <header>
@@ -20,7 +19,7 @@
     </header>
     <main>
       <section id="hero">
-        <h1>Care</h1>
+        <h1>Light</h1>
         <img
           src="assets/circular-element.svg"
           alt="Circular graphic element"
@@ -31,12 +30,14 @@
           alt="Textured photo of kawakawa"
           class="kawakawa-graphic"
         />
-        <a href="care.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
+        <a href="light.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
       </section>
 
       <section id="all-content">
+        <h3>Partial Shade</h3>
+        <h3>Filtered sunlgiht</h3>
+        <p>Since Auckland summers can get quite sunny, especially in open backyards, it’s best to plant kawakawa in a spot that gets morning light but is protected from the harsh afternoon sun. </p>
       </section>
-      
     </main>
   </body>
 </html>
