--- a/light.html
+++ b/light.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Links -->
-    <script type="module" src="./javascript/full-info-care.js" defer></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/full-info-care.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/light.css">
 
-    <title>Care full information</title>
+    <title>Light information</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="#" class="brand-name"><h5>Akea Haus</h5></a>
+        <a href="index.html" class="brand-name"><h5>Akea Haus</h5></a>
         <a href="#" class="menu">menu</a>
       </nav>
     </header>
     <main>
       <section id="hero">
-        <h1>Care</h1>
+          <h1>Light</h1>
         <img
           src="assets/circular-element.svg"
           alt="Circular graphic element"
@@ -31,12 +30,13 @@
           alt="Textured photo of kawakawa"
           class="kawakawa-graphic"
         />
-        <a href="care.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
+        <a href="full-info-light.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
+     
+        <section class="quick-info">
+          <h3>Partial shade</h3>
+          <h3>Filtered sunlight</h3>
+        </section> 
       </section>
-
-      <section id="all-content">
-      </section>
-      
     </main>
   </body>
 </html>
