--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         />
       </section>
       <section id="categories">
-        <a href="#" class="light-button"><span>Light</span></a>
-        <a href="#" class="water-button"><span>Watering</span></a>
+        <a href="light.html" class="light-button"><span>Light</span></a>
+        <a href="watering.html" class="water-button"><span>Watering</span></a>
         <a href="#" class="placement-button"><span>Placement</span></a>
         <a href="care.html" class="care-button"><span>Care</span></a>
       </section>
