final - database update

--- a/full-info-light.html
+++ b/full-info-light.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a href="#" class="brand-name"><h5>Akea Haus</h5></a>
+        <a href="index.html" class="brand-name"><h5>Akea Haus</h5></a>
         <a href="#" class="menu">menu</a>
       </nav>
     </header>
@@ -36,7 +36,10 @@
       <section id="all-content">
         <h3>Partial Shade</h3>
         <h3>Filtered sunlgiht</h3>
-        <p>Since Auckland summers can get quite sunny, especially in open backyards, it’s best to plant kawakawa in a spot that gets morning light but is protected from the harsh afternoon sun. </p>
+        <p>Since Auckland summers can get quite sunny, especially in open backyards, it’s best to plant kawakawa in a spot that gets morning light but is protected from the harsh afternoon sun. <br><br>
+        Think filtered light, like under a tree or next to a fence that offers partial shade. Too much direct sunlight can scorch the leaves, so some shelter helps it thrive. <br><br>
+        It grows naturally in the understory of forests. These areas receive filtered sunlight through the canopy of taller trees. The large, heart-shaped leaves can be prone to sunburn and scorching if exposed to direct sunlight for extended periods.
+      </p>
       </section>
     </main>
   </body>
