--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a href="#" class="brand-name"><h5>Akea Haus</h5></a>
+        <a href="index.html" class="brand-name"><h5>Akea Haus</h5></a>
         <a href="#" class="menu">menu</a>
       </nav>
     </header>
@@ -42,7 +42,7 @@
       <section id="categories">
         <a href="light.html" class="light-button"><span>Light</span></a>
         <a href="watering.html" class="water-button"><span>Watering</span></a>
-        <a href="#" class="placement-button"><span>Placement</span></a>
+        <a href="placement.html" class="placement-button"><span>Placement</span></a>
         <a href="care.html" class="care-button"><span>Care</span></a>
       </section>
     </main>
