--- a/placement.html
+++ b/placement.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Links -->
-    <script type="module" src="./javascript/full-info-care.js" defer></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/full-info-care.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/light.css">
 
-    <title>Care full information</title>
+    <title>Placement information</title>
   </head>
   <body>
     <header>
@@ -20,7 +19,7 @@
     </header>
     <main>
       <section id="hero">
-        <h1>Care</h1>
+          <h1>Placement</h1>
         <img
           src="assets/circular-element.svg"
           alt="Circular graphic element"
@@ -31,12 +30,13 @@
           alt="Textured photo of kawakawa"
           class="kawakawa-graphic"
         />
-        <a href="care.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
+        <a href="full-info-placement.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
+     
+        <section class="quick-info">
+          <h3>Near a window with sheer curtains</h3>
+          <h3>Shaded patio</h3>
+        </section> 
       </section>
-
-      <section id="all-content">
-      </section>
-      
     </main>
   </body>
 </html>
