--- a/watering.html
+++ b/watering.html
@@ -33,7 +33,7 @@
           alt="Textured photo of kawakawa"
           class="kawakawa-graphic"
         />
-        <a href="index.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
+        <a href="full-info-watering.html" class="back-button"><img src="assets/arrow-icon.svg" alt=""></a>
       </section>
 
       <section id="all-content">
